src/app/shared/profile/profile.component.scss
@import 'palette';
.profile {
  position: absolute;
  top: 30px;
  left: 30px;
  z-index: 1;
  cursor: pointer;
  padding: 10px;
  background: $main-color-light;
  border-radius: 4px;

  img {
    display: block;
  }
}
.centered-div {
  position: relative;
  display: flex;
  justify-content: center;
  margin: 0 16px 16px 16px;
}

